--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,21 +2,4 @@ site_name: My Docs
 site_url: https://example.com/
 
 theme:
-  name: null
-  
-  # 404 page
-  static_templates:
-    - 404.html
-
-  # Necessary for search to work properly
-  include_search_page: false
-  search_index_only: true
-
-  # Default values, taken from mkdocs_theme.yml
-  language: en
-  font:
-    text: Roboto
-    code: Roboto Mono
-  favicon: assets/favicon.png
-  icon:
-    logo: logo
+  name: material
