--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,14 +1,25 @@
 site_name: ShareCloud
 site_url: https://example.com/
 nav:
-  - Home: index.md
-  - About: about.md
+  - Avaleht: index.md
+  - Tooted:
+    - Puhkused: products/vacations.md
 
+  - _Juhendid:
+    #- manuals/index.md
+    - Puhkused: manuals/vacations.md
+    - DHS: manuals/dms.md
 
 theme:
   name: material
+  custom_dir: overrides
+  logo: assets/logo.png
+  language: et
   features:
+    - navigation.indexes
+    - navigation.sections
     - navigation.tabs
+  
 extra:
   social:
     - icon: fontawesome/brands/linkedin
