--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,10 +1,12 @@
-site_name: ShareCloud
+site_name: ShareCloud docs
 site_url: https://example.com/
 nav:
   - Avaleht: index.md
-  - Tooted:
+  - Lahendused:
     - Starter Intra: products/starter.md
     - Puhkused: products/vacations.md
+    - Dokumendihaldus: products/dms.md
+    - Pildigalerii: products/picturegallery.md
 
   - _Juhendid:
     #- manuals/index.md
@@ -13,6 +15,9 @@ nav:
 
 theme:
   name: material
+  palette:
+    primary: blue
+  favicon: img/favicon.ico
   custom_dir: overrides
   logo: assets/logo.png
   language: et
@@ -20,8 +25,17 @@ theme:
     - navigation.indexes
     - navigation.sections
     - navigation.tabs
+    - navigation.top
   
 extra:
+  homepage: https://sharecloud.ee/
+  generator: false
   social:
     - icon: fontawesome/brands/linkedin
       link: https://www.linkedin.com/company/sharecloud/
+    - icon: fontawesome/brands/facebook
+      link: https://www.facebook.com/ShareCloudOU
+copyright: Copyright &copy; 2021 ShareCloud OÜ
+markdown_extensions:
+  - admonition
+  - pymdownx.details
