--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,6 +6,7 @@ nav:
     - Starter Intra: products/starter.md
     - Puhkused: products/vacations.md
     - Dokumendihaldus: products/dms.md
+    - Digi-allkirjastamine: products/digitalSigning.md
     - Pildigalerii: products/picturegallery.md
 
   - _Juhendid:
